--- a/CSS/translated.css
+++ b/CSS/translated.css
@@ -54,7 +54,7 @@ textarea {
 /* partials */
 /* HEADER */
 HEADER {
-  padding: 1.6rem;
+  padding: 1rem;
   background-color: #F1B7AD;
   text-align: center;
   color: #000000; }
@@ -81,29 +81,29 @@ HEADER {
     transform: translateX(-20px); } }
 
 /* PIE DE PAGINA */
-footer {
-  padding: 1.6rem; }
-  footer .piedepacenter {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap; }
-    footer .piedepacenter .linea2 {
-      width: 250px;
-      margin-block: 20px;
-      margin-inline: 20px;
-      text-align: center; }
-      footer .piedepacenter .linea2 .piedepa {
-        font-size: 2em; }
-  footer .piedepa2 {
-    padding: 1rem;
-    font-size: 2em;
-    background-color: #000000;
+footer .piedepacenter {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  border: solid grey; }
+  footer .piedepacenter .linea2 {
+    width: 250px;
+    margin-block: 20px;
+    margin-inline: 20px;
     text-align: center; }
-    footer .piedepa2 Small {
-      background-color: #000000;
-      padding: 1rem;
-      color: #FFFCFC;
-      text-align: center; }
+    footer .piedepacenter .linea2 .piedepa {
+      font-size: 2em; }
+
+footer .piedepa2 {
+  padding: 1rem;
+  font-size: 2em;
+  background-color: #000000;
+  text-align: center; }
+  footer .piedepa2 Small {
+    background-color: #000000;
+    padding: 1rem;
+    color: #FFFCFC;
+    text-align: center; }
 
 /* pages */
 /* menu*/
@@ -149,7 +149,7 @@ footer {
     justify-content: space-around;
     flex-wrap: wrap;
     text-align: center; */
-  margin-block: 20px;
+  margin-block: 50px;
   margin-inline: 20px; }
   .linea1 .imglinea1 {
     max-width: 100%; }
@@ -162,12 +162,8 @@ footer {
     font-size: 3em; }
   h2 {
     font-size: 2.5em; }
-  h3 {
-    font-size: 1.5em; }
   p {
     font-size: 2em; }
-  .piedepa {
-    font-size: 1.5em; }
   .menu {
     gap: 20px; }
   @keyframes danzar {
@@ -182,7 +178,7 @@ footer {
   grid-template-columns: 1fr 2fr 1fr;
   text-align: justify;
   margin-top: 20px;
-  margin-bottom: 10px; }
+  margin-bottom: 70px; }
   .bienvenido .bienvenido1 {
     grid-column: 2; }
     .bienvenido .bienvenido1 .bienvenido2 {
@@ -199,8 +195,11 @@ footer {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin-block: 20px;
+  margin-block: 50px;
   margin-inline: 20px; }
+  .descripcion .cuadro {
+    width: 290px;
+    height: 399px; }
   .descripcion .imgtienda {
     width: 405px;
     height: 399px;
@@ -222,7 +221,8 @@ footer {
     margin-inline-start: 40px;
     box-sizing: border-box;
     margin-block: 20px;
-    margin-inline: 50px; }
+    margin-inline: 50px;
+    font-size: 2em; }
     .comentarios .diligenciar .diligenciar1 {
       margin-bottom: 70px; }
       .comentarios .diligenciar .diligenciar1 input, .comentarios .diligenciar .diligenciar1 textarea {
