--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -22,6 +22,8 @@
         box-sizing: border-box;
         margin-block: 20px;
         margin-inline: 50px;
+        font-size: $text-xs;
+       
 
         .diligenciar1{
             margin-bottom: 70px;  
