--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,7 +1,7 @@
 /* HEADER */
 
 HEADER {
-    padding: $sp-xs;
+    padding: $sp-xss;
     background-color: $primary;
     text-align: center;
     color: #000000;
