ajusta altura tienda

--- a/CSS/translated.css
+++ b/CSS/translated.css
@@ -198,8 +198,7 @@ footer .piedepa2 {
   margin-block: 50px;
   margin-inline: 20px; }
   .descripcion .cuadro {
-    width: 290px;
-    height: 399px; }
+    width: 290px; }
   .descripcion .imgtienda {
     width: 405px;
     height: 399px;
