ajuste enlace contacto en pie de pagina y SEO

--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -19,6 +19,10 @@ footer{
 
             .piedepa {
                 font-size: $text-xs;
+                
+                .piedepacontacto{
+                    color: black;
+                }
             }
         }
         
