--- a/CSS/translated.css
+++ b/CSS/translated.css
@@ -18,7 +18,6 @@ body {
   font-family: 'PT Sans Narrow', sans-serif; }
 
 a {
-  font-size: 3em;
   text-decoration: none; }
 
 ul {
@@ -93,6 +92,8 @@ footer .piedepacenter {
     text-align: center; }
     footer .piedepacenter .linea2 .piedepa {
       font-size: 2em; }
+      footer .piedepacenter .linea2 .piedepa .piedepacontacto {
+        color: black; }
 
 footer .piedepa2 {
   padding: 1rem;
@@ -119,7 +120,8 @@ footer .piedepa2 {
   /* justify-content: center;
     flex-wrap: wrap; */
   /* gap: 40px;  */
-  margin-top: 10px; }
+  margin-top: 10px;
+  font-size: 3em; }
   .menu .__menu {
     color: #000000; }
   .menu .__menu:hover {
@@ -156,8 +158,6 @@ footer .piedepa2 {
 
 /* responsive */
 @media screen and (max-width: 576px) {
-  a {
-    font-size: 2.5em; }
   h1 {
     font-size: 3em; }
   h2 {
@@ -165,7 +165,8 @@ footer .piedepa2 {
   p {
     font-size: 2em; }
   .menu {
-    gap: 20px; }
+    gap: 20px;
+    font-size: 2.5em; }
   @keyframes danzar {
     50% {
       transform: translateX(10px); }
@@ -207,7 +208,7 @@ footer .piedepa2 {
 /* Contacto */
 .comentarios {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(289px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   margin-block: 40px;
   width: 100%; }
   .comentarios .comentarios1 {
