--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -7,7 +7,8 @@
     /* justify-content: center;
     flex-wrap: wrap; */
     /* gap: 40px;  */
-    margin-top: 10px;  
+    margin-top: 10px;
+    font-size: $text-md;  
 
     & .__menu{
         color: $accent;
@@ -58,9 +59,7 @@
 /* responsive */
 
 @media screen and (max-width: 576px  ){
-    a{
-        font-size: $text-sm;
-    }
+   
     h1{
         font-size: $text-md;
     }
@@ -74,6 +73,7 @@
     
     .menu{
         gap: 20px;
+        font-size: $text-sm;
 
     }
     
@@ -88,4 +88,3 @@
     
      }
 }
-
